# HEPATITIS_C_MODEL

./: .dockerignore  .gitignore  DEPLOYMENT_CHECKLIST.md  Dockerfile  HF_DEPLOY.md  LICENSE  PYPI_PUBLISH.md  README.md  README_HF.md  app.py  packages.txt  pyproject.toml  pyproject.toml.backup  requirements.txt  setup.py
.github/workflows/: docs.yml
.streamlit/: config.toml
data/processed/: X_test.npy  X_train.npy  preprocessing_info.pkl  y_test.npy  y_train.npy
docs/: search.js  src.html
docs/src/: data.html  models.html  visualization.html
models/: hepatitis_model.pth  model_info.json
notebooks/: 01-data-exploration.ipynb  02-data-preprocessing.ipynb  03-model-training.ipynb  04-model-prediction.ipynb
reports/: README.md
reports/docs/: main.typ
saved_models/: hepatitis_model.pth
src/: __init__.py  app.py  data.py  models.py  visualization.py
