[project]
name = "hepatitis-c"
version = "0.1.0"
description = "A machine learning project for Hepatitis C detection using PyTorch"
requires-python = ">=3.9"

dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "pandas>=1.5.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.0.0",
]